--- a/assets/sass/_vars.sass
+++ b/assets/sass/_vars.sass
@@ -56,11 +56,17 @@ $weight-light: 300
 $weight-normal: 400
 $weight-semibold: 600
 
-/////////////////////////////////////////
+///////////////////////////////
 // turn objects off by default
-/////////////////////////////////////////
+///////////////////////////////
 
 $ark-media: false
 $ark-flag: false
 $ark-flex: false
 $ark-mast: false
+
+///////////////////////////////
+// gotham objects
+///////////////////////////////
+
+$sticky-footer: true
