move sass files to scss, adjust grunt config, add default js hooks

--- a/assets/sass/ui/_layout.scss
+++ b/assets/sass/ui/_layout.scss
@@ -2,9 +2,9 @@
 // layout partial
 /////////////////////////////////////////////////////////////////////
 
-.container,
-.c,
-%c
-	max-width: $site-width
-	width: 90%
-	margin: auto
+.container {
+	max-width: $site-width;
+	width: 90%;
+	margin: auto;
+}
+	
