--- a/assets/sass/screen.scss
+++ b/assets/sass/screen.scss
@@ -1,21 +1,28 @@
-/*
-
-Table of Contents for Sass partials
-
-*/
+//////////////////////////////////////////////////////////////////
+// table of contents sass file
+//////////////////////////////////////////////////////////////////
 
 /**
  * if you want to use compass in your theme, comment out the line below
  */
 
-/* @import "compass"; */
+// @import "compass";
 
+/**
+ * import custom Sass variables
+ * You can adjust this file to alter the output of the default Sass
+ * By default, it has Variables from the Ark framework. Read more about ark at http://arksass.github.io
+ */
+ 
 @import "vars";
 
 /** 
  * by default, gotham is designed to use the responsive framework Ark.
  * you can find ark at https://github.com/drewbolles/ark
- * clone or download ark and place it in the 'sass' directory along side your UI folder
+ * clone or download ark and place it in the 'sass' directory along side your UI folder.
+ *
+ * you are able to include any framework you'd like, but gotham works best with Sass based ones like Ark
+ * or Inuit CSS. Popular frameworks like Bootstrap or Foundation also have Sass versions.
  */
 
 @import "ark/ark";
@@ -24,5 +31,5 @@ Table of Contents for Sass partials
  * import your custom UI Sass partials below
  */
 
-@import "ui/elements";
+@import "ui/base";
 @import "ui/layout";
