--- a/assets/sass/_vars.scss
+++ b/assets/sass/_vars.scss
@@ -2,17 +2,17 @@
 // Default gotham variables - overriding ark
 ///////////////////////////////////////////////////////
 
-/**
- * responsive variables
- */
+/////////////////////////////////////////
+// responsive
+/////////////////////////////////////////
 
 // breakpoints
 $bp-names: lap desk;
 $bp-sizes: 768px 1024px;
 
-/**
- * layout variables
- */
+/////////////////////////////////////////
+// layout
+/////////////////////////////////////////
 
 // global site layout
 $site-width: 1180px;
@@ -23,17 +23,21 @@ $use-push: false;
 $use-pull: false;
 
 // vertical spacing rhythm
-$base-font-size: 16px;
-$base-line-height: 24px;
+$base-spacing-unit: 24px;
 
 // sticky footer
 $use-sticky-footer: true;
 $footer-height: 200px;
 
-/**
- * headings
- */
+/////////////////////////////////////////
+// typography
+/////////////////////////////////////////
 
+// base sizes
+$base-font-size: 16px;
+$base-line-height: 24px;
+
+// headings
 $h1-size: 42px;
 $h2-size: 38px;
 $h3-size: 32px;
@@ -41,17 +45,14 @@ $h4-size: 28px;
 $h5-size: 24px;
 $h6-size: 20px;
 
-/**
- * font weights
- */
-
+// font weights
 $weight-light: 300;
 $weight-normal: 400;
 $weight-semibold: 600;
 
-/**
- * turn objects off by default
- */
+/////////////////////////////////////////
+// ark objects
+/////////////////////////////////////////
 
 $use-media: false;
 $use-flag: false;
