adjust the base and layout comments, add helpers partial, import it

--- a/assets/sass/screen.scss
+++ b/assets/sass/screen.scss
@@ -13,7 +13,7 @@
  * You can adjust this file to alter the output of the default Sass
  * By default, it has Variables from the Ark framework. Read more about ark at http://arksass.github.io
  */
- 
+
 @import "vars";
 
 /** 
@@ -33,3 +33,4 @@
 
 @import "ui/base";
 @import "ui/layout";
+@import "ui/helpers";
