--- a/assets/sass/ui/_layout.scss
+++ b/assets/sass/ui/_layout.scss
@@ -2,6 +2,10 @@
 // layout partial
 /////////////////////////////////////////////////////////////////////
 
+/////////////////////////////////////////
+// site container
+/////////////////////////////////////////
+
 .container {
 	max-width: $site-width;
 	width: 90%;
