--- a/assets/sass/ui/_base.scss
+++ b/assets/sass/ui/_base.scss
@@ -1,12 +1,20 @@
 /////////////////////////////////////////////////////////////////////
-// elements partial
+// base elements
 /////////////////////////////////////////////////////////////////////
+
+/////////////////////////////////////////
+// html & body
+/////////////////////////////////////////
 
 body {
 	font: {
 		family: Georgia, serif;
 	}
 }
+
+/////////////////////////////////////////
+// headers
+/////////////////////////////////////////
 
 h1,h2,h3,h4,h5,h6 {
 	font: {
