adjust pull & push vars to true

--- a/assets/sass/_vars.scss
+++ b/assets/sass/_vars.scss
@@ -19,8 +19,8 @@ $site-width: 1180px;
 $global-box-sizing: true;
 
 // push & pull
-$use-push: false;
-$use-pull: false;
+$use-push: true;
+$use-pull: true;
 
 // vertical spacing rhythm
 $base-spacing-unit: 24px;
