include messages partial, and create colors vars

--- a/assets/sass/_vars.scss
+++ b/assets/sass/_vars.scss
@@ -69,3 +69,11 @@ $use-media: false;
 $use-flag: false;
 $use-flex: false;
 $use-mast: false;
+
+///////////////////////////////
+// ui colors
+///////////////////////////////
+
+$messages-success: #72d572;
+$messages-warning: #fff59d;
+$messages-error: #f69988;
