import footer partial

--- a/assets/sass/screen.scss
+++ b/assets/sass/screen.scss
@@ -33,6 +33,7 @@
 /* layout styles */
 @import "layout/global";
 @import "layout/nav";
+@import "layout/footer";
 
 /* component styles */
 @import "components/tabs";
