move extends into mixins where appropriate

--- a/assets/sass/base/_helpers.scss
+++ b/assets/sass/base/_helpers.scss
@@ -27,14 +27,6 @@
 /**
  * clearfix
  */
-%clearfix,
 .clearfix {
-	&:before,
-	&:after {
-		content: " ";
-		display: table;
-	}
-	&:after {
-		clear: both;
-	}
+	@include clearfix;
 } 
