--- a/assets/sass/base/_mixins.scss
+++ b/assets/sass/base/_mixins.scss
@@ -20,10 +20,44 @@
  */
 @mixin mq($point) {
   $size: map-get($breakpoints, $point);
+
   @media all and (min-width: $size) {
     @content;
   }
 }
+
+/**
+ * font size
+ *
+ * pass in a font size and convert to REM unit
+ */
+@mixin font-size($size: $font-size-base) {
+  font-size: $size;
+  font-size: $size/$font-size-base * 1rem;
+}
+
+/**
+ * hover
+ *
+ * apply hover & focus at same time.
+ * @param
+ *   active - whether to also use active class
+ */
+@mixin hover($active: false) {
+  @if($active == true) {
+    &:hover,
+    &:focus,
+    &.active {
+      @content;
+    }
+  } @else {
+    &:hover,
+    &:focus {
+      @content;
+    }
+  }
+}
+
 
 /**
  * vertical rhythm
@@ -52,3 +86,19 @@
     clear: both;
   }
 } 
+
+/**
+ * visually hidden
+ *
+ * invisible from screen but visible to screen readers
+ */
+@mixin visuallyhidden() {
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  position: absolute;
+  overflow: hidden;
+  border: 0;
+  clip: rect(0 0 0 0);
+}
