--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -9,12 +9,12 @@
 /* headings */
 h1,h2,h3,h4,h5,h6 {}
 
-h1 { font-size: $h1-size; }
-h2 { font-size: $h2-size; }
-h3 { font-size: $h3-size; }
-h4 { font-size: $h4-size; }
-h5 { font-size: $h5-size; }
-h6 { font-size: $h6-size; }
+h1 { @include font-size($h1-size); }
+h2 { @include font-size($h2-size); }
+h3 { @include font-size($h3-size); }
+h4 { @include font-size($h4-size); }
+h5 { @include font-size($h5-size); }
+h6 { @include font-size($h6-size); }
 
 /* paragraphs */
 p {}
