create spacing unit function and use in partials

--- a/assets/sass/components/_messages.scss
+++ b/assets/sass/components/_messages.scss
@@ -28,7 +28,7 @@ $msg-warning-border: #ffeb3b;
 .messages {
 	@include vr();
 	/* box model */
-	padding: $spacing-unit-base;
+	padding: spacing-unit();
 	/* presentation */
 	border: 0 solid #ccc;
 	border-width: 3px;
