--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -2,8 +2,7 @@
    Footer layout styles
    ========================================================================== */
 
-/* Sticky footer
-   ========================================================================== */
+/* sticky footer */
 @if $use-sticky-footer == true {
   @include mq(lap) {
     .site {
