--- a/assets/sass/screen.scss
+++ b/assets/sass/screen.scss
@@ -24,6 +24,7 @@
 @import "base/susy/language/susy"; 
 
 /* base styles */
+@import "base/functions";
 @import "base/mixins";
 @import "base/normalize";
 @import "base/elements";
