adjust var naming convention to be more standard

--- a/assets/sass/base/_elements.scss
+++ b/assets/sass/base/_elements.scss
@@ -19,7 +19,7 @@ h1,h2,h3,h4,h5,h6,p,ol,ul {
 /* html and body */
 body {
 	font-family: $font-family-serif;
-  font-size: $font-size-base;
+  font-size: $base-font-size;
   line-height: $line-height-ratio;
 }
 
