--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -1,12 +1,11 @@
-/* ==========================================================================
-   Typography
-   ========================================================================== */
-
 /**
- * any naked typography elements, and their modifying / state class names
+ * @file
+ * Typography styles
+ *
+ * Any naked typography elements, and their modifying / state class names.
  */   
 
-/* headings */
+// Headings
 h1,h2,h3,h4,h5,h6 {}
 
 h1 { @include font-size($h1-size); }
@@ -16,5 +15,5 @@ h4 { @include font-size($h4-size); }
 h5 { @include font-size($h5-size); }
 h6 { @include font-size($h6-size); }
 
-/* paragraphs */
+// Paragraphs
 p {}
