--- a/assets/sass/components/_tabs.scss
+++ b/assets/sass/components/_tabs.scss
@@ -1,11 +1,10 @@
-/* ==========================================================================
-   Drupal tabs
-   ========================================================================== */
-
 /**
- * styling of default drupal tabs
+ * @file
+ * Drupal tabs
+ *
+ * Styling of default drupal tabs.
  */
-.tabs { /* the class on the ul */
+.tabs { // the class on the ul
   padding: 0 spacing-unit(1/2);
 	border-bottom: 1px solid #ccc;
 	
