--- a/assets/sass/screen.scss
+++ b/assets/sass/screen.scss
@@ -1,29 +1,21 @@
-/* ==========================================================================
-   Sass table of contents
-   ========================================================================== */
-
 /**
- * if you want to use compass in your theme, comment out the line below
+ * @file
+ * Sass table of contents
  */
 
+// --
+// If you want to use compass in your theme, install the gem
+// and comment out the line below.
+// --
 // @import "compass";
 
-/**
- * import custom Sass variables. You can adjust this file to alter the 
- * output of the default Sass
- */
+// Variables
 @import "base/vars";
 
-/**
- * susy grids
- *
- * we're manually importing susy grids, which is the default grid
- * framework for the theme.
- * @TODO link to susy docs
- */
+// Susy - http://susydocs.oddbird.net/en/latest/
 @import "base/susy/language/susy"; 
 
-/* base styles */
+// Base
 @import "base/functions";
 @import "base/mixins";
 @import "base/normalize";
@@ -31,11 +23,11 @@
 @import "base/typography";
 @import "base/helpers";
 
-/* layout styles */
+// Layout
 @import "layout/global";
 @import "layout/nav";
 @import "layout/footer";
 
-/* component styles */
+// Components
 @import "components/tabs";
 @import "components/messages";
