fix important spelling

--- a/assets/sass/base/_mixins.scss
+++ b/assets/sass/base/_mixins.scss
@@ -96,14 +96,14 @@
  * Invisible from screen but visible to screen readers
  */
 @mixin visuallyhidden() {
-  width: 1px !imporant;
-  height: 1px !imporant;
-  padding: 0 !imporant;
-  margin: -1px !imporant;
-  position: absolute !imporant;
-  overflow: hidden !imporant;
-  border: 0 !imporant;
-  clip: rect(0 0 0 0) !imporant;
+  width: 1px !important;
+  height: 1px !important;
+  padding: 0 !important;
+  margin: -1px !important;
+  position: absolute !important;
+  overflow: hidden !important;
+  border: 0 !important;
+  clip: rect(0 0 0 0) !important;
 }
 
 /**
